Fix range bubble text wrapping some times

--- a/src/assets/css/tools.css
+++ b/src/assets/css/tools.css
@@ -329,6 +329,7 @@
   transform: translateX(-30%);
   pointer-events: none;
   z-index: 101;
+  white-space: nowrap;
 }
 
 .tools-html-div {
